adding new translated items

--- a/ru.po
+++ b/ru.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: po 4a\n"
 "POT-Creation-Date: 2013-05-22 13:23-0400\n"
-"PO-Revision-Date: 2014-04-19 15:00+0200\n"
+"PO-Revision-Date: 2014-04-20 23:21+0200\n"
 "Last-Translator: Lev Lamberov <l.lamberov@gmail.com>\n"
 "Language-Team: ru <debian-l10n-russian@lists.debian.org>\n"
 "Language: ru\n"
@@ -9407,10 +9407,9 @@ msgid ""
 "package that supersedes the one to be removed."
 msgstr ""
 "В вашем запросе об удалении вам следует подробно описать причины, "
-"обосновывающие ваше "
-"требование.  Это позволит избежать нежелательных удалений и отследить то, "
-"почему "
-"пакет был удалён.  Например, вы можете указать имя пакета, которые "
+"обосновывающие ваше требование.  Это позволит избежать нежелательных удалений "
+"и отследить то, "
+"почему пакет был удалён.  Например, вы можете указать имя пакета, которые "
 "заменяет удаляемый пакет."
 
 #. type: Content of: <chapter><section><section><para>
@@ -9424,6 +9423,19 @@ msgid ""
 "retitle the <literal>O:</literal> bug filed against the <literal>wnpp</"
 "literal> package instead of filing a new bug as removal request."
 msgstr ""
+"Обычно просят удалить те пакеты, которые сопровождаются самим запрашивающим "
+"об удалении.  "
+"Если вы хотите удалить другой пакет, вам следует получить на это разрешение "
+"от "
+"сопровождающего этого пакета. Если пакет должен быть признан осиротевшим, "
+"если он не имеет сопровождающего, то "
+"для начала вам следует обсудить запрос об удалении в &email-debian-qa;. В "
+"случае если было "
+"принято решение об удалении пакета, вам следует переназначить сообщение об "
+"ошибке "
+"в пакете <literal>wnpp</literal> и изменить его заголовок на <literal>O:<"
+"/literal> вместо "
+"того, чтобы отправлять новое сообщение об ошибке с запросом об удалении."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1343
@@ -9432,6 +9444,11 @@ msgid ""
 "topics may be found at <ulink url=\"http://wiki.debian.org/ftpmaster_Removals"
 "\"></ulink> and <ulink url=\"&url-debian-qa;howto-remove.html\"></ulink>."
 msgstr ""
+"Дополнительная информация, связанная с этими вопросами, а также по теме "
+"удаления других "
+"пакетов может быть найдена по адресу <ulink "
+"url=\"http://wiki.debian.org/ftpmaster_Removals"
+"\"></ulink> и <ulink url=\"&url-debian-qa;howto-remove.html\"></ulink>."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1348
@@ -9447,6 +9464,20 @@ msgid ""
 "\"package\">devscripts</systemitem> package) and <command>grep-dctrl</"
 "command>.  Removal of orphaned packages is discussed on &email-debian-qa;."
 msgstr ""
+"Если вы сомневаетесь в том, может ли быть удалён какой-либо пакет, обратитесь "
+"по адресу &email-debian-"
+"devel; с этим вопросом.  Кроме того, интерес представляет программа <command>"
+"apt-cache</"
+"command> из пакета <systemitem role=\"package\">apt</systemitem>.  "
+"При запуске <literal>apt-cache showpkg <replaceable>пакет</"
+"replaceable></literal>, эта программа отобразит подробную информацию о "
+"<replaceable>пакете</replaceable>, включая его обратные зависимости.  Другими "
+"полезными "
+"программами являются <command>apt-cache rdepends</command>, <command>apt-"
+"rdepends</command>, <command>build-rdeps</command> (из пакета <systemitem "
+"role="
+"\"package\">devscripts</systemitem>) и <command>grep-dctrl</"
+"command>.  Удаление осиротевших пакетов обсуждается в &email-debian-qa;."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1361
@@ -9460,11 +9491,23 @@ msgid ""
 "previous Debian releases, they should be marked as fixed in the version "
 "<literal>&lt;most-recent-version-ever-in-Debian&gt;+rm</literal>."
 msgstr ""
+"После удаления пакета следует разобраться с его сообщениями об ошибках.  "
+"Они должны быть либо переназначены другому пакету в случае, когда "
+"фактический код ПО развился в другой пакет (напр.,  <literal>libfoo12</"
+"literal> был удалён из-за того, что <literal>libfoo13</literal> его "
+"вытеснил), либо "
+"закрыты если это ПО более не является частью Debian.  Закрывая сообщения об "
+"ошибках, "
+"не отмечайте их как исправленный в версиях пакета из "
+"предыдущих выпусков Debian, они должны быть отмечены как исправленные в "
+"<literal>&lt;наиболее -свежей-версии-в-Debian&gt;+rm</literal>."
 
 #. type: Content of: <chapter><section><section><section><title>
 #: pkgs.dbk:1372
 msgid "Removing packages from <filename>Incoming</filename>"
 msgstr ""
+"Удаление пакетов из каталога <filename>Incoming</filename> (каталога входящих "
+"пакетов)"
 
 #. type: Content of: <chapter><section><section><section><para>
 #: pkgs.dbk:1374
@@ -9479,6 +9522,18 @@ msgid ""
 "proper testing of your packages, the need to replace a package should not "
 "occur too often anyway."
 msgstr ""
+"Раньше можно было удалять пакеты из каталога <filename>incoming</"
+"filename>.  Тем не менее, в введением новой системы входящих пакетов это "
+"более не возможно.  Вместо этого вам следует загрузить новую версию вашего "
+"пакета с более высоким номером версии, чем имеет тот пакет, который вы хотите "
+"заменить.  Обе "
+"версии будут установлены в архив, но лишь пакет с более высокой версией будет "
+"фактически доступен в <literal>нестабильном</literal> выпуске, поскольку "
+"предыдущая "
+"версия будет сразу же заменена более новой версией.  Тем не менее, если вы "
+"хорошо "
+"тестируете ваши пакеты, нужды заменять пакет скорее всего "
+"не возникнет."
 
 #. type: Content of: <chapter><section><section><title>
 #: pkgs.dbk:1389
@@ -9502,6 +9557,24 @@ msgid ""
 "(see <xref linkend=\"removing-pkgs\"/>).  Do not forget to properly reassign "
 "the package's bugs at the same time."
 msgstr ""
+"Если сопровождающие основной ветки разработки решают изменить название своего "
+"ПО (либо если вы дали вашему пакету неверное имя), вам необходимо следовать "
+"процессу по переименованию пакета, который включает в себя два шага. На "
+"первом шаге измените "
+"файл <filename>debian/control</filename> так, чтобы в нём было отражено новое "
+"имя пакета, а также для того, "
+"чтобы устаревшее имя пакета было указано для замены, предоставления и в "
+"списке конфликтующих пакетов (см. <ulink "
+"url=\"&url-debian-policy;\">Руководство по политике Debian</ulink>).  "
+"Заметьте, что вам следует добавлять отношение <literal>Provides</literal> "
+"только тогда, когда "
+"все пакет, зависящие от устаревшего пакета, продолжают работать после "
+"переименования. Когда вы загрузите пакет, и он будет перемещён в "
+"архив, отправьте сообщение об ошибке в псевдопакете <systemitem "
+"role=\"package\">&ftp-"
+"debian-org;</systemitem> с просьбой удалить пакет с устаревшим именем "
+"(см. <xref linkend=\"removing-pkgs\"/>).  Не забудьте правильно переназначить "
+"сообщения об ошибке, чтобы они отсылали к новому имени пакета."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1407
@@ -9517,11 +9590,23 @@ msgid ""
 "bz2</filename>.  This restriction gives each file on the ftp site a unique "
 "name, which helps to ensure consistency across the mirror network."
 msgstr ""
+"Вы можете допустить ошибку при создании вашего пакета, тогда вы захотите "
+"заменить свой пакет.  Единственным способом сделать это является увеличение "
+"номера версии "
+"и загрузка новой версии пакет.  Старая версия как обычно станет "
+"устаревшей.  Заметьте, что это касается каждой части вашего пакета, включая и "
+"исходный код: если вы хотите заменить архив tarball с исходным кодом из "
+"основной ветки, "
+"вам придётся загрузить ваш пакет с другим номером версии.  Проще всего "
+"заменить <filename>foo_1.00.orig.tar.gz</filename> на "
+"<filename>foo_1.00+0.orig.tar.gz</filename>, либо <filename>foo_1.00.orig.tar."
+"bz2</filename>.  Данное ограничение позволяет каждому файлу на ftp иметь "
+"уникальное имя, что помогает гарантировать согласованность в сети зеркалов."
 
 #. type: Content of: <chapter><section><section><title>
 #: pkgs.dbk:1422
 msgid "Orphaning a package"
-msgstr "Придание статуса сироты"
+msgstr "Придание статуса осиротевшего пакета"
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1424
@@ -9540,6 +9625,22 @@ msgid ""
 "use CC:, because that way the message's subject won't indicate the bug "
 "number)."
 msgstr ""
+"Если вы не можете более сопровождать пакет, вам нужно сообщить об этом "
+"остальным, и убедиться, что "
+"ваш пакет отмечен как осиротевший.  Вам следует установить сопровождающего "
+"пакета в значение <literal>Debian QA Group &orphan-address;</literal> и "
+"отправить "
+"сообщение об ошибке в псевдопакете <systemitem role=\"package\">wnpp</"
+"systemitem>.  Заголовок сообщения об ошибке должен иметь вид <literal>O: "
+"<replaceable>пакет</replaceable> -- <replaceable>краткое описание</"
+"replaceable></literal>, что показывает, что пакет осиротел.  Важность "
+"сообщения об ошибке должна иметь значение <literal>normal</literal>; если "
+"пакет имеет стандартный приоритет или выше, важность сообщения об ошибке "
+"должна иметь значение important.  Если вы считаете это необходимым, отправьте "
+"копию сообщения на адрес &email-debian-devel;, "
+"добавив этот адрес в заголовок X-Debbugs-CC: вашего сообщения (не используйте "
+"CC:, так как тогда тема сообщения не будет содержать номер сообщения "
+"об ошибке)."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1439
@@ -9551,12 +9652,21 @@ msgid ""
 "replaceable></literal>.  <literal>RFA</literal> stands for <literal>Request "
 "For Adoption</literal>."
 msgstr ""
+"Если вы хотите отдать пакет, но вы можете пока продолжать сопровождать "
+"его, то вам следует отправить сообщения об ошибке в псевдопакете <systemitem "
+"role=\"package\">wnpp</systemitem>, сообщение должно иметь заголовок вида <"
+"literal>RFA: "
+"<replaceable>пакет</replaceable> -- <replaceable>краткое описание</"
+"replaceable></literal>.  <literal>RFA</literal> означает <literal>Request "
+"For Adoption</literal> (запрос об усыновлении)."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1447
 msgid ""
 "More information is on the <ulink url=\"&url-wnpp;\">WNPP web pages</ulink>."
 msgstr ""
+"Дополнительная информация доступна на <ulink url=\"&url-wnpp;\">веб-страницах "
+"WNPP</ulink>."
 
 #. type: Content of: <chapter><section><section><title>
 #: pkgs.dbk:1453
@@ -9572,6 +9682,13 @@ msgid ""
 "in the WNPP, please take a look at the aforementioned page for information "
 "and procedures."
 msgstr ""
+"Список пакетов, которым требуются новые сопровождающие, доступен на странице "
+"<ulink "
+"url=\"&url-wnpp;\">Требующих доработки и будущих пакетов (WNPP)</"
+"ulink>.  Если вы хотите заняться сопровождением какого-либо пакета из тех, "
+"что приведены в списке "
+"WNPP, обратитесь к вышеупомянутой странице для получения информации и "
+"сведений о процедуре."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1462
@@ -9582,6 +9699,14 @@ msgid ""
 "reason to believe a maintainer has gone AWOL (absent without leave), see "
 "<xref linkend=\"mia-qa\"/>."
 msgstr ""
+"Нельзя просто взять и заняться работой над пакетом, который кажется вам "
+"заброшенным — это "
+"было бы кражой пакета.  Вы, конечно, можете связаться с текущим "
+"сопровождающим "
+"и спросить его об этом.  Если у вас имеются основания полагать, что "
+"сопровождающий просто отсутствует без уведомления об этом (AWOL, absent "
+"without leave), см. "
+"<xref linkend=\"mia-qa\"/>."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1468
@@ -9594,6 +9719,17 @@ msgid ""
 "the attention of the technical committee (see the <ulink url=\"&url-tech-"
 "ctte;\">technical committee web page</ulink> for more information)."
 msgstr ""
+"Как правило, вы не можете заняться работой над пакетом без специального "
+"согласия на это "
+"от текущего сопровождающего.  Даже если он вас игнорирует это всё равно не "
+"является основанием для "
+"начала работы над пакетом.  Жалобы на сопровождающих должны высказываться в "
+"списке "
+"рассылки для разработчиков.  Если дискуссия не заканчивается позитивным "
+"заключением, а проблема имеет техническую природу, подумайте над тем, чтобы "
+"привлечь к ней внимание технического комитета (дополнительную информацию см. "
+"на <ulink url=\"&url-tech-"
+"ctte;\">странице технического комитета</ulink>)."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1478
@@ -9607,11 +9743,24 @@ msgid ""
 "reports.  However, make sure that the old maintainer has no problem with the "
 "fact that they will continue to receive the bugs during that time."
 msgstr ""
+"Если вы занялись работой над старым пакетом, вам вероятно захочется, чтобы в "
+"системе отслеживания ошибок "
+"в качестве официального сопровождающего этого пакета были указаны вы.  Это "
+"будет сделано автоматически "
+"как только вы загрузите новую версию с обновлённым полем "
+"<literal>Maintainer</literal>, хотя на это может потребоваться несколько "
+"часов после "
+"выполнения загрузки.  Если вы пока не собираетесь загружать новую версию, "
+"вы можете использовать <xref linkend=\"pkg-tracking-system\"/> для получения "
+"сообщений "
+"об ошибках.  Тем не менее, убедитесь, что старый сопровождающий не против "
+"того факта, что "
+"он будет получать сообщения об ошибках в течении какого-то времени."
 
 #. type: Content of: <chapter><section><section><title>
 #: pkgs.dbk:1490
 msgid "Reintroducing packages"
-msgstr ""
+msgstr "Повторное добавление пакетов"
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1492
@@ -9621,6 +9770,12 @@ msgid ""
 "reintroduction is similar to the initial packaging process, you can avoid "
 "some pitfalls by doing some historical research first."
 msgstr ""
+"Пакеты часто удаляются из-за наличия в них критичных для выпуска ошибок, "
+"отсутствия сопровождающих, "
+"слишком малого числа пользователей или низкого качества. Хотя процесс "
+"повторного добавления пакета схож с первоначальной работой над пакетом, вы "
+"можете избежать "
+"некоторых ловушек, выполнив для начала небольшое историческое исследование."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1498
@@ -9634,6 +9789,18 @@ msgid ""
 "best way forward is to switch to some other piece of software instead of "
 "reintroducing the package."
 msgstr ""
+"Для начала вам следует проверить, почему пакет был удалён. Эта "
+"информация может быть найдена в сообщении об удалении в разделе новостей на "
+"странице PTS "
+"данного пакета, либо при просмотре журнала <ulink url=\"http://&ftp-"
+"master-host;/#removed\">удалений</ulink>.  Сообщение об удалении в системе "
+"отслеживания ошибок содержит "
+"сведения о том, почему пакет был удалён, а также покажет вам то, над чем вам "
+"следует "
+"поработать для того, чтобы заново добавить пакет.  В сообщении может "
+"содержаться сведения о том, "
+"что вместо повторного добавления пакета лучше всего переключиться на какое-то "
+"другое ПО."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1508
@@ -9642,6 +9809,12 @@ msgid ""
 "are working on reintroducing the package, interested in co-maintaining the "
 "package or interested in sponsoring the package if needed."
 msgstr ""
+"Хорошо было бы связаться с предыдущими сопровождающими и выяснить, работают "
+"ли они "
+"над повторным добавление пакета, заинтересованы ли они в совместном "
+"сопровождении "
+"пакета, либо заинтересованы ли они в спонсировании пакета, если это "
+"необходимо."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1513
@@ -9649,6 +9822,9 @@ msgid ""
 "You should do all the things required before introducing new packages (<xref "
 "linkend=\"newpackage\"/>)."
 msgstr ""
+"Вам следует сделать всё, что требуется, до того как добавлять новые пакеты (<"
+"xref "
+"linkend=\"newpackage\"/>)."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1517
@@ -9658,6 +9834,12 @@ msgid ""
 "literal>, which will still be present in the <ulink url=\"&snap-debian-org;"
 "\">snapshot archive</ulink>."
 msgstr ""
+"В качестве основы для своей работы вам следует взять самый последний доступны "
+"и "
+"подходящий пакет.  Это может быть самая последняя версия из <literal>"
+"нестабильного</"
+"literal> выпуска, которая всё ещё доступна в <ulink url=\"&snap-debian-org;"
+"\">снимке архива</ulink>."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1522
@@ -9668,6 +9850,14 @@ msgid ""
 "headers linking to the version control system for the package and if it "
 "still exists."
 msgstr ""
+"Система контроля версий, которая использовалась предыдущим сопровождающим, "
+"может содержать "
+"полезные изменения, поэтому проверка репозитория может оказаться хорошей "
+"идеей.  Проверьте, "
+"содержит ли файл <filename>control</filename> в предыдущем пакете какие-либо "
+"заголовки со ссылками на систему контроля версий для данного пакета, и если "
+"да, то существует ли "
+"всё ещё этот репозиторий."
 
 #. type: Content of: <chapter><section><section><para>
 #: pkgs.dbk:1528
@@ -9680,11 +9870,24 @@ msgid ""
 "Any that no longer apply should be marked as fixed in the correct version if "
 "that is known."
 msgstr ""
+"Удаление пакета из <literal>нестабильного</literal> выпуска (не из <literal>"
+"тестируемого</"
+"literal>, <literal>стабильного</literal> или <literal>предыдущего "
+"стабильного</literal> выпусков) приводит к "
+"закрытию всех сообщений об ошибках, которые связаны с удаляемым пакетом. Вам "
+"следует проверить все "
+"закрытые сообщения об ошибках (включая заархивированные сообщения об "
+"ошибках), разархивировать и заново открыть любые "
+"закрытые сообщения об ошибках в версии, заканчивающейся на <literal>+rm<"
+"/literal>, и которые всё ещё актуальны. "
+"Любые неактуальные сообщения об ошибках должны быть помечены как исправленные "
+"в той версии, в которой они были исправлены, если "
+"это, конечно, известно."
 
 #. type: Content of: <chapter><section><title>
 #: pkgs.dbk:1541
 msgid "Porting and being ported"
-msgstr ""
+msgstr "Работа на переносом и перенос пакетов"
 
 #. type: Content of: <chapter><section><para>
 #: pkgs.dbk:1543
