very small update

--- a/ru.po
+++ b/ru.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: po 4a\n"
 "POT-Creation-Date: 2013-05-22 13:23-0400\n"
-"PO-Revision-Date: 2014-04-20 23:21+0200\n"
+"PO-Revision-Date: 2014-04-24 23:27+0200\n"
 "Last-Translator: Lev Lamberov <l.lamberov@gmail.com>\n"
 "Language-Team: ru <debian-l10n-russian@lists.debian.org>\n"
 "Language: ru\n"
@@ -9897,6 +9897,12 @@ msgid ""
 "duty as a maintainer to be aware of issues of portability.  Therefore, even "
 "if you are not a porter, you should read most of this chapter."
 msgstr ""
+"Debian поддерживает всё увеличивающееся число архитектур.  Даже если вы не "
+"занимаетесь переносом и используете только одну архитектуру, вы как "
+"сопровождающий "
+"обязаны знать о проблемах, связанных с переносимостью.  Следовательно, даже "
+"если вы не занимаетесь переносом, вам следует прочесть большую часть данной "
+"главы."
 
 #. type: Content of: <chapter><section><para>
 #: pkgs.dbk:1549
